--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                     <input class="field"  name="username" required autocomplete="off" type="text" placeholder="Phone number,username, or email">
                     <div class="password">
                         <input name="password" class="password-input" id="password" autocomplete="off" type="password" required placeholder="Password">
-                        <p id="toggle"  onclick="showHide()">Show</p>
+                        <p id="toggle"  onclick="showHide()">show</p>
                     </div>
                     <span class="forgot-span"><a href="#" class="forget">Forget password?</a></span>
                     <button class="Submit">Log In</button>
