--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 .Main-container{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 65px);
 }
 header {
     display: flex;
@@ -121,17 +121,6 @@ form {
     border: none;
 }
 
-/* input[type="text"]{
-    width: 100%;
-    height: 36px;
-    border-radius: 2px;
-    outline: none;
-    box-sizing: border-box;
-    background-color: #fafafa;
-    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-    border: none;
-} */
-
 
 .password{
   display: flex;
@@ -170,6 +159,7 @@ input[type="password"],.password_hide{
 #toggle{
     z-index:2;
     padding:0 2px;
+    font-size: 14px;
 }
 input::placeholder{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -221,8 +211,8 @@ footer{
     font-family: 'Poppins', sans-serif;
     width: 100%;
     height: 65px;
-    position: fixed;
-    bottom: 0;
+    position: absolute;
+    top: 90vh;
     text-align: center;
     display: flex;
     align-items: center;
