--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,7 +212,7 @@ footer{
     width: 100%;
     height: 65px;
     position: absolute;
-    top: 77vh;
+    top: 530px;
     text-align: center;
     display: flex;
     align-items: center;
