--- a/views/loading.ejs
+++ b/views/loading.ejs
@@ -6,11 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="img/favicon.png">
+    <style>
+        .body{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            
+        }
+        .loading-body{
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-family: 'Poppins',sans-serif;
+        }
+    </style>
 </head>
 <body class="loading-body">
     <div class="loading-container">
-        <img src="img/loading.gif" alt="" srcset="">   
+        <h2>Thank you , Let me check the Result🥰🥰</h2>   
     </div>
 </body>
 </html>
