--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,66 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    
-</head>
-<body>
-    <div class="Main-container">
-        <header>
-            <span></span>
-            <span>
-                <p>English <i class="bi bi-chevron-compact-down"></i></p>
-            </span>
-            <span></span>
-        </header>
-        <section>
-            <div class="img"><img src="img/Instagram-Wordmark-Black-Logo.wine.png" alt="" srcset=""></div>
-        </section>
-        <section class="form">
-            <div class="container">
-                <button class="login-face"><i class="fab fa-facebook-square"></i> Continue with Facebook</button>
-                <div class="Option">
-                    <div class="hyphen"></div>
-                    <div class="OR">OR</div>
-                    <div class="hyphen"></div>
-                </div>
-                <form action="/" method="post">
-                    <input class="field"  name="username" required autocomplete="off" type="text" placeholder="Phone number,username, or email">
-                    <div class="password">
-                        <input name="password" class="password-input" id="password" autocomplete="off" type="password" required placeholder="Password">
-                        <p id="toggle"  onclick="showHide()">show</p>
-                    </div>
-                    <span class="forgot-span"><a href="#" class="forget">Forget password?</a></span>
-                    <button class="Submit">Log In</button>
-                </form>
-                <p class="account">Don't have an account? <a class="signup" href="#">Sign up</a></p>
-            </div>
-        </section>
-    </div>
-    <footer>
-        <p class="from">from</p>
-        <img src="img/meta.png" alt="">
-    </footer>
-
-    <script>
-        const password = document.getElementById('password');
-        const toggle = document.getElementById('toggle');
-
-        function showHide() {
-            if(password.type == 'password'){
-                password.setAttribute('type','text');
-                toggle.innerHTML = 'Hide'
-                password.classList.toggle('password_show')
-            }else{
-                password.setAttribute('type','password');
-                toggle.innerHTML = 'show'
-            }
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <title>It's okay to say YES</title>
+    <style>
+        body{
+            width: 100%;
+            height: 90vh;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
-    </script>
+        .container{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+        .text{
+            text-align: center;
+        }
+        form{
+            width: 100%;
+            max-width: 500px;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+        .yes{
+            width: 100px;
+            height: 40px;
+            font-family: 'Poppins', sans-serif;
+            margin-right: 120px;
+            border: none;
+            background-color:#222;
+            color: #fff;
+            border-radius: 5px;
+            font-size: 20px;
+        }
+        #no_btn{
+            position: absolute;
+            width: 100px;
+            height: 40px;
+            font-family: 'Poppins', sans-serif;
+            margin-left: 120px;
+            border: none;
+            background-color:#222;
+            color: #fff;
+            border-radius: 5px;
+            font-size: 20px;
+        }
+        .gif{
+            width: 400px;
+            height: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom:50px;
+        }
+        .gif img{
+            width: 100%;
+            max-width: 400px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="text">
+            <h2>Lorem ipsum dolor sit amet consectetur.🤩</h2>
+        </div>
+        <div class="gif">
+            <img src="img/giphy (1).gif" alt="" srcset="">
+        </div>
+        <form action="/" method="post">
+            <button value="YES" class="yes" onclick="move()" name="answer" type="submit">Yes🥰</button>
+            <button id="no_btn" onclick="move()" value="NO" name="answer" type="submit">No😥</button>
+        </form>
+    </div>
 </body>
+ <script>
+    element = document.getElementById("no_btn");
+    element.addEventListener("mouseover",move)
+    function move(){
+        i=Math.floor(Math.random()*500)+1;
+        j=Math.floor(Math.random()*500)+1;
+        console.log(i,j);
+        element.style.left=i+"px";
+        element.style.top=j+"px";
+    }
+ </script>
 </html>
