minor changes added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100;200;300;400;500;600;700;800;900&family=Pacifico&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>It's okay to say YES</title>
     <style>
         body{
@@ -25,6 +25,7 @@
         }
         .text{
             text-align: center;
+            font-family: 'Pacifico', cursive;
         }
         form{
             width: 100%;
@@ -43,6 +44,7 @@
             color: #fff;
             border-radius: 5px;
             font-size: 20px;
+            cursor: pointer;
         }
         #no_btn{
             position: absolute;
@@ -55,6 +57,7 @@
             color: #fff;
             border-radius: 5px;
             font-size: 20px;
+            cursor: pointer;
         }
         .gif{
             width: 400px;
@@ -74,10 +77,10 @@
 <body>
     <div class="container">
         <div class="text">
-            <h2>Lorem ipsum dolor sit amet consectetur.🤩</h2>
+            <h2><u>I</u>  deeply in <u>LOVE</u> and I want <u>YOU</u> forever in my life. Can we tie the knot soon?<br>🥰🥰</h2>
         </div>
         <div class="gif">
-            <img src="img/giphy (1).gif" alt="" srcset="">
+            <img src="img/giphy (3).gif" alt="" srcset="">
         </div>
         <form action="/" method="post">
             <button value="YES" class="yes" onclick="move()" name="answer" type="submit">Yes🥰</button>
