--- a/views/loading.ejs
+++ b/views/loading.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram</title>
+    <title>Still hoping🥰</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
         .body{
@@ -19,13 +19,24 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
             font-family: 'Poppins',sans-serif;
+        }
+        .loading-body .img{
+            max-width: 500px;
+            width: 98%;
+
+        }
+        .loading-container h2{
+            font-weight: 400;
         }
     </style>
 </head>
 <body class="loading-body">
+    <img src="img/giphy(2).gif" alt="">
     <div class="loading-container">
-        <h2>Thank you , Let me check the Result🥰🥰</h2>   
+        <h2>Let me check the Result🥰🥰<br>
+        still hoping it's going to be YES 😅</h2>   
     </div>
 </body>
 </html>
