--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,99 +4,272 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100;200;300;400;500;600;700;800;900&family=Pacifico&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>It's okay to say YES</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    
+    <title>Instagram</title>
     <style>
-        body{
+        .container {
             width: 100%;
-            height: 90vh;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px 0;
+            font-family: 'Roboto',sans-serif;
         }
-        .container{
+        .language{
             width: 100%;
-            height: 100%;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            flex-direction: row;
+            height: 16px;
+            margin-bottom: 10px;
+        }
+        .language p{
+            color: #444444;
+            font-size: 11px;
+            
+        }
+        .language p svg{
+            margin-right: 5px;
+        }
+        .logo{
+            padding: 50px 0;
+            height: auto;
+            width: 170px;
+        }
+        .login_form{
+            /* max-width: 350px; */
+            width: 100%;
+            /* height: 300px; */
+            padding: 0 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .fb_btn{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: row;
+            width: 240px;
+            padding: 7px 0px;
+            outline: none;
+            border: none;
+            font-size: 13px;
+            border-radius: 7px;
+            background-color: rgb(0, 149, 246);
+            color: #fff !important;
+            font-weight: 600;
+        }
+        .fb_btn span{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+        .fb_btn span p{
+            padding: 0;
+            margin: 0;
+        }
+        .fb_btn span i{
+            font-size: 20px;
+            padding: 0;
+            margin-right: 5px;
+        }
+        .seperator{
+            display: flex;
+            width: 100%;
+            height: 57px;
+            align-items: center;
+            justify-content: center;
+            
+        }
+        .seperator p{
+            color: #737373;
+            font-size: 13px;
+            font-weight: 600;
+            padding: 0;
+            margin:  0 13px;
+        }
+        .seperator .line {
+            width: 94px;
+            height: 1px;
+            background-color: hsl(0, 1%, 85%);
+            line-height: 50px;
+        }
+        form{
+            width: 100%;
+            height: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            padding-top: 5px;
+        }
+        input::placeholder{
+            font-size:13px;
+            outline: none;
+        }
+        input:focus{
+            outline: none;
+        }
+        input:focus .hide_btn{
+            display: block;
+        }
+        input[type=text]{
+            font-size: 13px;
+        }
+        input{
+            width: 240px;
+            margin-bottom: 6px;
+            border: 1px solid rgb(219, 219, 219);
+            background-color: rgb(250, 250, 250);
+            border-radius: 3px;
+            height: 36px;
+            padding-left: 5px;
+        }
+        .hide_btn{
+            position: relative;
+            top: -34px;
+            left: 98 px;
+            z-index: 2;
+            color:#444444;
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 13px;
+            display: none;
+            height:1px;
+        }
+        .forgot_password{
+            margin-top: 6px;
+            width: 250px;
+            height: auto;
+            text-align: end;
+            margin-bottom: 10px;
+        }
+        .forgot_password p{
+            text-decoration: none;
+            color:rgb(0, 149, 246);
+            font-size: 13px;
+            margin: 0;
+        }
+        .submit{
+            margin-top:13px;
+            color: #fff;
+            width: 240px;
+            outline: none;
+            border: none;
+            background-color:rgb(0, 149, 246);
+            opacity: 0.7;
+            height: 35px;
+            border-radius: 6px;
+            font-weight: 600;
+            font-size: 13px;
+        }
+        .signup{
+            margin-top: 35px;
+            font-size: 13px;
+            color: #737373;
+        }
+        .signup a{
+            font-size: 13px;
+            font-weight:600;
+            text-decoration: none;
+            color: rgb(0, 149, 246);
+        }
+        footer{
+            position: absolute;
+            bottom: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
         }
-        .text{
-            text-align: center;
-            font-family: 'Pacifico', cursive;
-        }
-        form{
-            width: 100%;
-            max-width: 500px;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-        }
-        .yes{
-            width: 100px;
-            height: 40px;
-            font-family: 'Poppins', sans-serif;
-            margin-right: 120px;
-            border: none;
-            background-color:#222;
-            color: #fff;
-            border-radius: 5px;
-            font-size: 20px;
-            cursor: pointer;
-        }
-        #no_btn{
-            position: absolute;
-            width: 100px;
-            height: 40px;
-            font-family: 'Poppins', sans-serif;
-            margin-left: 120px;
-            border: none;
-            background-color:#222;
-            color: #fff;
-            border-radius: 5px;
-            font-size: 20px;
-            cursor: pointer;
-        }
-        .gif{
-            width: 400px;
-            height: auto;
+        .upper{
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-bottom:50px;
+            flex-direction: column;
         }
-        .gif img{
-            width: 100%;
-            max-width: 400px;
+        .upper p{
+            font-size: 11px;
+            color: #737373;
+            text-align: center;
+            padding: 0;
+            margin: 0;
         }
+        .upper span{
+            display: flex;
+            align-items: center;
+        }
+        .upper img{
+            width: 52px;
+            height:27px;
+        }
+       
+        
     </style>
 </head>
 
 <body>
+
     <div class="container">
-        <div class="text">
-            <h2><u>I</u>  deeply in <u>LOVE</u> and I want <u>YOU</u> forever in my life. Can we tie the knot soon?<br>🥰🥰</h2>
+        <div class="language">
+            <p>English 
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-down" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"/>
+               </svg>
+            </p>
         </div>
-        <div class="gif">
-            <img src="img/giphy (3).gif" alt="" srcset="">
+       
+        <img class="logo" src="/img/Instagram.png" alt="">
+       
+        <div class="login_form">
+            <button class="fb_btn"><span><i class="fa-brands fa-square-facebook"></i> <p>Continue with Facebook</p></span></button>
+            <div class="seperator">
+                <div class="line"></div> <p>OR</p> <div class="line"></div>
+            </div>
+            <form action="/" method="post">
+                <input class="username" type="text" name="username" autocomplete="off" placeholder="Phone number, username, or email">
+                <input class="password"  id="pass" oninput='btn()' type="password" name="password" placeholder="Password">
+                <a class="hide_btn" id="hide_btn" onclick="show()">Hide</a>
+                <div class="forgot_password"><p>Forget password?</p></div>
+                <button class="submit" type="submit">Log in</button>
+                <p class="signup">Don't have an account? <a href="#">Sign up</a></p>
+            </form>
         </div>
-        <form action="/" method="post">
-            <button value="YES" class="yes" onclick="move()" name="answer" type="submit">Yes🥰</button>
-            <button id="no_btn" onclick="move()" value="NO" name="answer" type="submit">No😥</button>
-        </form>
-    </div>
+        <footer>
+            <div class="upper">
+                <img src="https://static.cdninstagram.com/rsrc.php/yb/r/SxCWlJznXoy.svg" alt="" srcset="">
+            </div>
+            
+        </footer>
+    </div> 
 </body>
- <script>
-    element = document.getElementById("no_btn");
-    element.addEventListener("mouseover",move)
-    function move(){
-        i=Math.floor(Math.random()*500)+1;
-        j=Math.floor(Math.random()*500)+1;
-        console.log(i,j);
-        element.style.left=i+"px";
-        element.style.top=j+"px";
+<script>
+    const activeElement = document.activeElement;
+
+    var pass = document.getElementById("pass");
+    console.log(pass);
+    var txt = document.getElementById("hide_btn");
+    
+    function show() {
+        if (txt.innerText === "Hide") {
+            txt.innerText = "Show";
+            pass.type='text'
+        } else {
+            txt.innerText = "Hide";
+            pass.type='password'
+        }
     }
- </script>
+    function btn(){
+        txt.style.display='block';
+    }
+</script>
+ 
 </html>
