--- a/views/index.ejs
+++ b/views/index.ejs
@@ -227,7 +227,7 @@
             </p>
         </div>
        
-        <img class="logo" src="/img/Instagram.png" alt="">
+        <img class="logo" src="https://raw.githubusercontent.com/Mohamed-shabil/instagram-Login-page/main/public/img/instagram.png" alt="">
        
         <div class="login_form">
             <button class="fb_btn"><span><i class="fa-brands fa-square-facebook"></i> <p>Continue with Facebook</p></span></button>
