--- a/views/loading.ejs
+++ b/views/loading.ejs
@@ -1,38 +1,467 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Still hoping🥰</title>
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Instagram</title>
+    <link
+      rel="shortcut icon"
+      href="https://static.cdninstagram.com/rsrc.php/v3/yt/r/30PrGfR3xhB.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <style>
-        .body{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            
-        }
-        .loading-body{
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            font-family: 'Poppins',sans-serif;
-        }
-        .loading-body .img{
-            max-width: 500px;
-            width: 98%;
-
-        }
-        .loading-container h2{
-            font-weight: 400;
-        }
+      .loading-body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+      }
+      .loading-body svg {
+        width: 50px;
+        height: 50px;
+      }
     </style>
-</head>
-<body class="loading-body">
-    <img src="img/giphy(2).gif" alt="">
-</body>
+  </head>
+  <body class="loading-body">
+    <?xml version="1.0" encoding="utf-8"?>
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      style="
+        margin: auto;
+        background: rgb(255, 255, 255);
+        display: block;
+        shape-rendering: auto;
+      "
+      width="217px"
+      height="217px"
+      viewBox="0 0 100 100"
+      preserveAspectRatio="xMidYMid"
+    >
+      <g transform="rotate(0 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.9523809523809523s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(17.142857142857142 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.9047619047619048s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(34.285714285714285 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.8571428571428571s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(51.42857142857143 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.8095238095238095s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(68.57142857142857 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.7619047619047619s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(85.71428571428571 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.7142857142857143s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(102.85714285714286 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.6666666666666666s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(120 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.6190476190476191s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(137.14285714285714 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.5714285714285714s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(154.28571428571428 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.5238095238095238s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(171.42857142857142 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.47619047619047616s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(188.57142857142858 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.42857142857142855s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(205.71428571428572 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.38095238095238093s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(222.85714285714286 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.3333333333333333s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(240 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.2857142857142857s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(257.14285714285717 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.23809523809523808s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(274.2857142857143 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.19047619047619047s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(291.42857142857144 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.14285714285714285s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(308.57142857142856 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.09523809523809523s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(325.7142857142857 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="-0.047619047619047616s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <g transform="rotate(342.85714285714283 50 50)">
+        <rect
+          x="49"
+          y="25"
+          rx="0.96"
+          ry="0.96"
+          width="2"
+          height="12"
+          fill="#999999"
+        >
+          <animate
+            attributeName="opacity"
+            values="1;0"
+            keyTimes="0;1"
+            dur="1s"
+            begin="0s"
+            repeatCount="indefinite"
+          ></animate>
+        </rect>
+      </g>
+      <!-- [ldio] generated by https://loading.io/ -->
+    </svg>
+  </body>
 </html>
